@@ -181,4 +181,26 @@ $( document ).ready(function() {
 		});
 	});
 	
+	// Tree Sort Adjacency
+	$('#checkboxTreeSortAdj').on('change', function(){
+		var value = $(this).is(':checked');
+		
+		var data = {
+			property: 'treeSortAdj',
+			value: value
+		};
+		data = JSON.stringify(data);
+		
+		$.post('backend/process_settings.php', {data:data}, function(response){
+			var responseJSON = JSON.parse(response);
+			if (responseJSON.active == 'inactive'){
+				window.location.replace("/");
+			} else if ($(responseJSON.error).size() > 0){
+				displayError(responseJSON.error);
+			} else {
+				displaySuccess(responseJSON.success);
+			}
+		});
+	});
+	
 });
