@@ -29,6 +29,9 @@ Contents
 \\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\
 
 **Changes introduced in 0.3.9
+[Enhance]	Added location/cabinet tree sorting options
+[Enhance]	Clear backup file on upload
+[Fix]		Prevent same name cabinets from sharing location
 
 **Changes introduced in 0.3.8
 [Enhance]	Added MPO-12, MPO-24, and QSFP port types
